remove db dependency